# ruvon-swarm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
examples/swarm_studio/: README.md  camera.js  coi-serviceworker.js  command_brain.js  drone_command_steps.py  drone_sim.js  drone_sim_3d.js  formations.js  formations_3d.js  index.html  info.html  learning_loop.js  manifest.json  mesh_brain.js  physics_worker.js  pyodide_worker.js  renderer_webgpu.js  ruvon_sdk-0.1.2-py3-none-any.whl  ruvon_sdk-0.1.3-py3-none-any.whl  ruvon_swarm-0.1.0-py3-none-any.whl  ruvon_swarm-0.1.1-py3-none-any.whl  serve.py  sidecar.js  storage.js  trystero-nostr.js  trystero-torrent.js
examples/swarm_studio/pyodide-cache/: PyYAML-6.0.1-cp312-cp312-pyodide_2024_0_wasm32.whl  annotated_types-0.6.0-py3-none-any.whl  attrs-23.2.0-py3-none-any.whl  jsonschema-4.21.1-py3-none-any.whl  jsonschema_specifications-2023.12.1-py3-none-any.whl  msgspec-0.18.6-cp312-cp312-pyodide_2024_0_wasm32.whl  pydantic-2.7.0-py3-none-any.whl  pyrsistent-0.20.0-cp312-cp312-pyodide_2024_0_wasm32.whl  rpds_py-0.18.0-cp312-cp312-pyodide_2024_0_wasm32.whl
examples/swarm_studio/workflows/: drone_command.yaml
src/ruvon_swarm/: __init__.py  state_models.py  utils.py
src/ruvon_swarm/steps/: command_router.py  formation.py  telemetry.py
src/ruvon_swarm/workflows/: drone_command.yaml  swarm_formation.yaml  swarm_health.yaml
tests/: test_formation_steps.py  test_mulberry32.py  test_swarm_health.py
