[project]
name = "ruvon-swarm"
version = "0.1.0"
description = "Ruvon marketplace package — swarm orchestration workflows for browser-based drone demonstrations"
authors = [{name = "Ruvon Team", email = "team@ruvon.dev"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ruvon", "swarm", "drone", "workflow", "webgpu", "edge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = ["ruvon-sdk>=0.1.2", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/KamikaziD/ruvon-swarm"
Repository = "https://github.com/KamikaziD/ruvon-swarm"
Demo = "https://kamazid.github.io/ruvon-swarm/"
Documentation = "https://kamazid.github.io/ruvon-docs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruvon_swarm"]
